# opengl_start

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: main.cpp
